--- a/TrackingKapal/res/values/styles.xml
+++ b/TrackingKapal/res/values/styles.xml
@@ -56,6 +56,13 @@
     <style name="text_tab_action_bar">
         <item name="android:textColor">@color/white</item>
     </style>
+    
+    <style name="default_textview">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">15sp</item>
+    </style>
 	
     <style name="edit_theme" parent="android:Theme">
 		<item name="android:layout_width">fill_parent</item>
