--- a/TrackingKapal/res/layout/map_layout.xml
+++ b/TrackingKapal/res/layout/map_layout.xml
@@ -4,5 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <fragment
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.tracking.kapal.MyMapFragment"/>
 
 </LinearLayout>
