--- a/TrackingKapal/res/layout/main_menu_page.xml
+++ b/TrackingKapal/res/layout/main_menu_page.xml
@@ -4,15 +4,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <com.tracking.kapal.customcomponent.CustomViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="0dp"
-        android:orientation="vertical"
-        android:scrollbars="none"
-        android:layout_weight="1">
+    <FrameLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" >
+	    
+        <com.tracking.kapal.customcomponent.CustomViewPager
+	        android:id="@+id/viewPager"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_margin="0dp"
+	        android:orientation="vertical"
+	        android:scrollbars="none"
+	        >
+	        
+	    </com.tracking.kapal.customcomponent.CustomViewPager>
+	    
+        <!-- hack to fix ugly black artefact with maps v2 -->
+        <FrameLayout 
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent" 
+	        android:background="@android:color/transparent" />
         
-    </com.tracking.kapal.customcomponent.CustomViewPager>
+    </FrameLayout>
 
 </LinearLayout>
