--- a/TrackingKapal/res/layout/manual_layout.xml
+++ b/TrackingKapal/res/layout/manual_layout.xml
@@ -31,6 +31,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"/>
             <Button 
+                android:id="@+id/button_manual"
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
 		        android:textColor="@color/white"
