--- a/TrackingPelabuhanServer/css/style.css
+++ b/TrackingPelabuhanServer/css/style.css
@@ -320,3 +320,8 @@ table.my_table textarea{
     width: 400px;
     resize: none;
 }
+
+p.paging{margin-bottom:10px; text-align:right;}
+p.paging strong{color:#FFFFFF; border:solid 1px; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px; padding:4px 7px; font-size:12px; box-shadow:0px 1px #EDEDED; -moz-box-shadow:0px 1px #EDEDED; -webkit-box-shadow:0px 1px #EDEDED; text-shadow:0px 1px #388DBE; border-color:#3390CA; background:#58B0E7; background:-moz-linear-gradient(top,#B4F6FF 1px,#63D0FE 1px,#58B0E7); background:-webkit-gradient(linear,0 0,0 100%,color-stop(0.02,#B4F6FF),color-stop(0.02,#63D0FE),color-stop(1,#58B0E7));}
+p.paging a{border:solid 1px; font-size:12px; text-decoration:none; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px; padding:4px 7px; color:#0A7EC5; border-color:#8DC5E6; background:#F8FCFF;}
+p.paging a:hover{color:#FFFFFF; border-color:#3390CA; background:#58B0E7; background:-moz-linear-gradient(top,#B4F6FF 1px,#63D0FE 1px,#58B0E7); background:-webkit-gradient(linear,0 0,0 100%,color-stop(0.02,#B4F6FF),color-stop(0.02,#63D0FE),color-stop(1,#58B0E7));}
